--- a/src/main/resources/templates/account/list.html
+++ b/src/main/resources/templates/account/list.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout.html}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>회원 목록</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <style>
         /* 테이블 경계 스타일 */
         .table-border {
-            border: 1px solid #ffb6c1; /* 테이블 외부 경계 */
+            border: 1px solid #FFA500; /* 테이블 외부 경계 */
         }
         .table-border th, .table-border td {
-            border: 1px solid #ffb6c1; /* 셀 경계 */
+            border: 1px solid #FFA500; /* 셀 경계 */
             text-align: center; /*가운데 정렬*/
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="row mt-5">
-            <div class="col-6 offset-3">
-                <h2 class="text-center">회원 목록 </h2> </br>
-                <table class="table table-border">
+<div layout:fragment="content">
+    <div class="container-fluid bg-light border shadow-sm row g-0 w-75 mx-auto rounded p-0 mt-3" style="min-height: 600px">
+        <div class="row mt-3 justify-content-center">
+            <div class="col-10">
+                <h5 class="text-center">회원 목록 </h5> </br>
+                <table class="table table-border mx-auto" style="min-width: 35vw">
                     <thead>
-                        <tr>
-                            <th> 회원 이메일</th>
-                            <th> 회원 이름 </th>
-                            <th> 회원 전화번호 </th>
-                            <th> 회원 권한 </th>
-                            <th> 탈퇴 </th>
-                        </tr>
+                    <tr>
+                        <th> 회원 이메일</th>
+                        <th> 회원 이름 </th>
+                        <th> 회원 전화번호 </th>
+                        <th> 회원 권한 </th>
+                        <th> 탈퇴 </th>
+                    </tr>
                     </thead>
                     <tbody>
                     <!-- 회원 정보를 -->
@@ -41,44 +43,33 @@
                         <td th:text="${user.phone}"></td>
                         <td th:text="${user.role}"></td>
                         <td>
-                            <form th:action="@{/account/delete}" method="post" onsubmit="return confirm('정말로 이 회원을 탈퇴시키겠습니까?');">
-                                <input type="hidden" name="email" th:value="${user.email}"/>
-                                <button type="submit" class="btn btn-danger">탈퇴</button>
-                            </form>
-
-                            <button type="button" class="deldel btn btn-info" th:value="${user.email}">탈퇴</button>
-
-
+                            <button type="button" class="deldel btn btn-danger" th:value="${user.email}">탈퇴</button>
                         </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-
-        <form class="formObjj" method="post" action="/account/delete">
-
-        </form>
-        
-        <script> 
-            $(".deldel").on("click", function () {
-                if(confirm('정말로 이 회원을 탈퇴시키겠습니까?')){
-                    console.log("홍길동")
-                    console.log($(this).val())
-                    create
-                    let str = `<input type="hidden" name="email" value="${$(this).val()}"/>`
-                    $(".formObjj").append(str)
-                    $(".formObjj").submit()
-
-                }else {
-                    console.log("취소")
-                    return false;
-                }
-
-            })
-        
-        </script>
     </div>
+    <form class="formObjj" method="post" action="/account/delete"></form>
+
+    <script>
+        $(".deldel").on("click", function () {
+            if(confirm('정말로 이 회원을 탈퇴시키겠습니까?')){
+                console.log("홍길동")
+                console.log($(this).val())
+                let str = `<input type="hidden" name="email" value="${$(this).val()}"/>`
+                $(".formObjj").append(str)
+                $(".formObjj").submit()
+
+            }else {
+                console.log("취소")
+                return false;
+            }
+
+        })
+    </script>
+</div>
 
 </body>
 </html>
