--- a/src/main/resources/templates/account/mypage.html
+++ b/src/main/resources/templates/account/mypage.html
@@ -1,33 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout.html}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>마이페이지</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
-    <div class = "row mt-5">
-        <div class="col-6 offset-3">
-            <h2 class="text-center">My Page</h2> </br>
+<div layout:fragment="content">
+    <div class="container-fluid bg-light border shadow-sm row g-0 w-75 mx-auto rounded p-0 mt-3" style="min-height: 600px">
+        <div class="row mt-3 justify-content-center">
+            <div class="col-7 mt-5">
+                <h5 class="text-center">My Page</h5> </br>
+                <!-- 메시지 표시 영역 -->
+                <div th:if="${message}" class="alert alert-success" th:text="${message}"></div>
 
-            <!-- 메시지 표시 영역 -->
-            <div th:if="${message}" class="alert alert-success" th:text="${message}"></div>
+                <label for="email" class="form-label">이메일</label>
+                <input type="text" id="email" th:value="${accountDTO.email}" class="form-control" readonly><br>
 
-            <label for="email" class="form-label">이메일</label>
-            <input type="text" id="email" th:value="${accountDTO.email}" class="form-control" readonly>
+                <label for="name" class="form-label">이름</label>
+                <input type="text" id="name" th:value="${accountDTO.name}" class="form-control" readonly><br>
 
-            <label for="name" class="form-label">이름</label>
-            <input type="text" id="name" th:value="${accountDTO.name}" class="form-control" readonly>
+                <label for="phone" class="form-label">연락처</label>
+                <input type="text" id="phone" th:value="${accountDTO.phone}" class="form-control" readonly><br>
 
-            <label for="phone" class="form-label">연락처</label>
-            <input type="text" id="phone" th:value="${accountDTO.phone}" class="form-control" readonly>
+                <div class="text-center mt-4">
+                    <a href="/account/modifyprofile" class="btn btn-primary"> 정보 수정 </a>
+                    <a href="/account/edit" class="btn btn-secondary"> 비밀번호 변경</a>
+                    <button type="button" class="deldel btn btn-danger" th:value="${accountDTO.email}">회원 탈퇴</button>
+                </div>
 
-            <div class="text-center mt-4">
-                <a href="/account/modifyprofile" class="btn btn-primary"> 정보 수정 </a>
-                <a href="/account/edit" class="btn btn-secondary"> 비밀번호 변경</a>
-               <!-- <a href="/account/delete" class="btn btn-danger"> 회원 탈퇴</a> -->
+                <form class="formObjj" method="post" action="/account/delete"></form>
+                <script>
+                    $(".deldel").on("click", function () {
+                        if(confirm('정말로 이 회원을 탈퇴시키겠습니까?')){
+                            console.log("홍길동")
+                            console.log($(this).val())
+
+                            let str = `<input type="hidden" name="email" value="${$(this).val()}"/>`
+                            $(".formObjj").append(str)
+                            $(".formObjj").submit()
+
+                        }else {
+                            console.log("취소")
+                            return false;
+                        }
+
+                    })
+                </script>
             </div>
         </div>
     </div>
