--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -1,70 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout.html}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>회원가입</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-<div class="container">
+<div layout:fragment="content">
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-6 offset-3">
+                <form action="/account/register" th:object="${accountDTO}" method="post">
+                    <h5 class="text-center">회원 가입</h5>
 
-    <script th:inline="javascript">
-        let msg = [[${msg}]]
+                    <div class="mb-3">
+                        <label for="email" class="form-label">아이디/이메일</label>
+                        <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="name@example.com" required>
+                        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError"></p>
+                    </div>
 
-        if(msg != null){
-            alert(msg)
-        }
-    </script>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">비밀번호</label>
+                        <input type="password" th:field="*{password}" class="form-control" id="password" required>
+                        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError"></p>
+                    </div>
 
-    <div class="row">
-        <div class="col-6 offset-3">
-            <form action="/account/register" th:object="${accountDTO}" method="post">
-                <h2 class="text-center">회원 가입</h2> </br>
+                    <div class="mb-3">
+                        <label for="password1" class="form-label">비밀번호 재확인</label>
+                        <input type="password" th:field="*{password1}" class="form-control" id="password1" required>
+                        <p th:if="${#fields.hasErrors('password1')}" th:errors="*{password1}" class="fieldError"></p>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="email" class="form-label">아이디/이메일</label>
-                    <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="name@example.com" required>
-                    <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">
-                </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">이름</label>
+                        <input type="text" th:field="*{name}" class="form-control" id="name">
+                        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError"></p>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="password" class="form-label">비밀번호</label>
-                    <input type="password" th:field="*{password}" class="form-control" id="password" required>
-                    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError"></p>
-                </div>
+                    <div class="mb-3">
+                        <label for="phone" class="form-label">연락처</label>
+                        <input type="text" th:field="*{phone}" class="form-control" id="phone">
+                        <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError"></p>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="password1" class="form-label">비밀번호 재확인</label>
-                    <input type="password" th:field="*{password1}" class="form-control" id="password1" required>
-                    <p th:if="${#fields.hasErrors('password1')}" th:errors="*{password1}" class="fieldError"></p>
-                </div>
+                    <input type="hidden" name="role" value="USER">
 
-                <div class="mb-3">
-                    <label for="name" class="form-label">이름</label>
-                    <input type="text" th:field="*{name}" class="form-control" id="name">
-                    <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError"></p>
-                </div>
+                    <div class="text-center mt-4">
+                        <button class="btn btn-primary">가입</button>
+                        <a type="button" href="/account/login" class="btn btn-secondary">로그인</a>
+                    </div>
+                </form>
 
-                <div class="mb-3">
-                    <label for="phone" class="form-label">연락처</label>
-                    <input type="text" th:field="*{phone}" class="form-control" id="phone">
-                    <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError"></p>
-                </div>
-
-                <div class="mb-3">
-                    <label for="role" class="form-label"> 권한 </label>
-                    <select th:field="*{role}" class="form-select" required>
-                        <option th:value="USER"> 일반 사용자 </option>
-                        <option th:value="ADMIN"> 관리자 </option>
-                    </select>
-                    <p th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="fieldError"></p>
-                </div>
-
-                <div class="text-center mt-4">
-                    <button class="btn btn-primary">가입</button>
-                </div>
-            </form>
+                <script th:inline="javascript">
+                    let msg = [[${msg}]]
+                    if (msg != null) {
+                        alert(msg)
+                    }
+                </script>
+            </div>
         </div>
     </div>
 </div>
