--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -6,62 +6,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-<!-- 네비게이션 메뉴 (기본 및 토글 모두 포함) -->
-<div th:fragment="header" class="border rounded bg-light shadow-sm">
 
-    <!-- 기본 네비게이션 메뉴 -->
+<div th:fragment="header" class="border rounded bg-light shadow-sm">
     <nav class="navbar navbar-expand-md navbar-light bg-body-tertiary p-0 m-0" style="background-image: url('/navback.webp'); background-size: cover; background-position: center;">
         <a href="/main/home">
             <img src="/logo.webp" class="navbar-brand btn p-0 m-0" id="home" style="width: 100px; height: 100px; object-fit: scale-down;">
         </a>
         <div class="container-fluid d-flex align-items-center">
-
-            <!-- 네비게이션 메뉴 가운데 정렬 및 간격 넓힘 -->
             <div class="collapse navbar-collapse me-5" id="navbarSupportedContent">
                 <div class="flex-grow-1 d-flex align-items-center col-8 offset-3 navoff">
                     <ul class="navbar-nav flex-row mb-2 mb-md-0">
-                        <li class="nav-item dropdown col-5 h3">
-                            <a class="nav-link btn poor-story-regular" id="blogTapToggle" href="#">
+                        <li class="nav-item dropdown col-5 h3 ms-3 me-3">
+                            <a class="nav-link btn poor-story-regular text-nowrap" id="blogTapToggle" href="/blog/list">
                                 조잘조잘
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="blogTapToggle">
-                                <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogDetailToggle">블로그</button></li>
-                                <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogVoteToggle">추천 블로그</button></li>
+                                <th:block sec:authorize="isAuthenticated()">
+                                    <li><a href="/blog/register" class="dropdown-item poor-story-regular">조잘조잘 작성</a></li>
+                                </th:block>
+                                <li><a href="/blog/list" class="dropdown-item poor-story-regular">조잘조잘 리스트</a></li>
                             </ul>
                         </li>
 
-                        <li class="nav-item dropdown col-5 offset-4 col-5 h3">
-                            <a class="nav-link btn poor-story-regular" id="placeTapToggle" href="#">
+                        <li class="nav-item dropdown col-5 h3 ms-3 me-3">
+                            <a class="nav-link btn poor-story-regular text-nowrap" id="placeTapToggle" href="/place/list">
                                 플레이스
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="placeTapToggle">
-                                <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetailToggle">플레이스 블로그</button></li>
-                                <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeVoteToggle">추천 플레이스</button></li>
+                                <li><a href="/place/list" class="dropdown-item poor-story-regular">플레이스</a></li>
+                                <li><a href="/place/list" class="dropdown-item poor-story-regular">식당</a></li>
                             </ul>
                         </li>
 
-                        <li class="nav-item dropdown col-6 offset-4 col-5 h3">
-                            <a class="nav-link btn poor-story-regular" id="eventTapToggle" href="#">
+                        <li class="nav-item dropdown col-5 h3 ms-3 me-3">
+                            <a class="nav-link btn poor-story-regular text-nowrap" id="eventTapToggle" href="#">
                                 공지 및 이벤트
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="eventTapToggle">
-                                <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventDetailToggle">공지사항</button></li>
-                                <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventVoteToggle">이벤트</button></li>
+                                <li><a href="/notice/list" class="dropdown-item poor-story-regular">공지사항</a></li>
+                                <li><a href="/notice/list" class="dropdown-item poor-story-regular">이벤트</a></li>
                             </ul>
                         </li>
                     </ul>
                 </div>
             </div>
 
-            <!-- 회원가입 및 로그인 버튼을 토글 버튼 왼쪽에 배치 -->
             <div class="d-flex ms-auto align-items-center justify-content-end flex-nowrap">
-                <button class="btn nav nav-link order-2">회원가입</button>
-                <button class="btn nav nav-link order-3">로그인</button>
+                <th:block sec:authorize="isAnonymous()">
+                    <a href="/account/register" class="btn nav nav-link order-2">회원가입</a>
+                </th:block>
+                <th:block sec:authorize="isAnonymous()">
+                    <a href="/account/login" class="btn nav nav-link order-3">로그인</a>
+                </th:block>
 
-                <!-- 토글 버튼은 우측 끝에 고정 -->
+                <th:block sec:authorize="isAuthenticated()">
+
+                    <span th:text="${#authentication.principal.username + '님'}" class="ms-2 me-5 username"></span>
+
+                    <div class="nav-item dropdown me-5 d-flex align-items-center">
+
+                        <!-- 아이콘에만 드롭다운 토글 설정 -->
+                        <a class="nav-link p-0" id="accountIconToggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="/mypage.webp" class="ps-2" style="width: 50px; height: 50px;">
+                            <p>My Page</p>
+                        </a>
+
+                        <!-- 드롭다운 메뉴 -->
+                        <ul class="dropdown-menu" aria-labelledby="accountIconToggle">
+                            <th:block sec:authorize="hasRole('ADMIN')">
+                                <li><a href="/account/list" class="dropdown-item">회원관리</a></li>
+                            </th:block>
+                            <li><a href="/account/mypage" class="dropdown-item">마이페이지</a></li>
+                            <li><a href="/account/logout" class="dropdown-item">로그아웃</a></li>
+                        </ul>
+                    </div>
+                </th:block>
+
                 <button class="navbar-toggler order-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -85,66 +109,34 @@
             color: #d0e7ff !important;
         }
 
-        @media (max-width: 1300px) {
-            .offset-3 {
-                margin-left: 0 !important;
-            }
-        }
-                /* 1150px 이하에서 offset 제거 */
-        @media (max-width: 1150px) {
-            .offset-4, .offset-3 {
-                margin-left: 0 !important;
-            }
+        .nav-item .username {
+            pointer-events: none; /* 이름에 링크 비활성화 */
+            color: inherit !important;
         }
 
-        /* 768px 이하에서 토글 메뉴가 나올 때 모든 요소를 한 줄로 배치 */
-        @media (max-width: 768px) {
-            .container-fluid {
-                display: flex !important;
-                flex-wrap: nowrap !important; /* 줄바꿈 방지 */
-                justify-content: space-between !important; /* 요소 간 간격 유지 */
+        @media (max-width: 1055px) {
+            /* 1055px 이하에서 유저 이름 숨기기 */
+            .username {
+                display: none;
             }
 
-
-            /* 홈 버튼 줄바꿈 방지 */
-            #home {
-                margin-right: 10px !important;
-                white-space: nowrap !important; /* 줄바꿈 방지 */
+            /* 1055px 이하에서 글자 크기 조정 */
+            .navbar-nav .nav-link {
+                font-size: 0.9rem !important;
+                padding-left: 0.3rem;
+                padding-right: 0.3rem;
             }
 
-            /* 네비게이션 메뉴 중앙 정렬 조정 */
-            .navbar-nav {
-                display: flex !important;
-                flex-wrap: nowrap !important; /* 메뉴 줄바꿈 방지 */
-                justify-content: center !important; /* 메뉴를 가운데 정렬 */
-            }
-
-            .navbar-nav .nav-item {
-                margin-right: 5px !important;
-                white-space: nowrap !important; /* 줄바꿈 방지 */
-            }
-
-            /* 로그인 및 회원가입 버튼 한 줄 유지 */
-            .d-flex.ms-auto {
-                display: flex !important;
-                flex-wrap: nowrap !important; /* 줄바꿈 방지 */
-                justify-content: flex-end !important; /* 오른쪽 정렬 */
-                margin-left: auto !important; /* 오른쪽 끝에 딱 붙게 설정 */
-            }
-
-            /* 회원가입 및 로그인 버튼이 가로로 나열되도록 설정 */
-            .d-flex.ms-auto button {
-                display: inline-block !important; /* 세로 배치 방지 */
-                margin-right: 5px;
-            }
-
-            /* flex-nowrap를 추가하여 버튼들이 가로로만 나열되도록 설정 */
-            .flex-nowrap {
-                flex-wrap: nowrap !important;
+            /* 1055px 이하에서 로고 크기 조정 */
+            .navbar-brand img {
+                width: 80px !important;
+                height: 80px !important;
             }
         }
     </style>
 
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/js/bootstrap.bundle.min.js"></script>
 </div>
 
 </body>
