--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -7,45 +7,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
-<div layout:fragment="content">
-
-    <title>Title</title>
-
-
-    <style>
-        .table {
-            font-size: 70%;
-        }
-
-        .thead {
-            font-size: 70%;
-            text-align: center;
-        }
-
-        .rec1 {
-            display: inline-block;
-            text-align: end;
-
-        }
-
-    </style>
-
-
+<div layout:fragment="content" class="container-fluid mt-5">
 
     <div id="carouselExampleAutoplaying" class="carousel slide mt-5 d-flex justify-content-center" data-bs-ride="carousel">
-
-        <div class="carousel-inner" style="width: 61vw; height: 43vh;">
+        <div class="carousel-inner" style="width: 64.5vw; height: 30vh;">
             <div class="carousel-item active w-100 h-100">
-                <img src="/1.png" class="w-100 h-100" style="object-fit: fill">
+                <img src="/banner/1.png" class="w-100 h-100" style="object-fit: fill">
             </div>
             <div class="carousel-item w-100 h-100">
-                <img src="/2.jpg" class="w-100 h-100" style="object-fit: fill;">
+                <img src="/banner/2.png" class="w-100 h-100" style="object-fit: fill;">
             </div>
             <div class="carousel-item w-100 h-100">
-                <img src="/3.webp" class="w-100 h-100" style="object-fit: fill;">
+                <img src="/banner/3.png" class="w-100 h-100" style="object-fit: fill;">
+            </div>
+            <div class="carousel-item w-100 h-100">
+                <img src="/banner/4.png" class="w-100 h-100" style="object-fit: fill;">
+            </div>
+            <div class="carousel-item w-100 h-100">
+                <img src="/banner/5.png" class="w-100 h-100" style="object-fit: fill;">
             </div>
         </div>
 
@@ -59,124 +43,99 @@
         </button>
     </div>
 
+    <div class="row p-0 m-0 mt-5 mb-5 container-fluid justify-content-center">
 
-
-
-
-    <div class="container">
-        <div class="row mt-5 mb-5">
-            <div class="col">
-                <div class="row">
-                    <div class="col mt-3 mb-3 ms-3 me-3">
-                        <div class="card h-100">
-                            <div class="card-body shadow">
-                                <h5 class="card-title ">Top 5 블로그</h5>
-                                <div class="row thead  mt-3">
-                                    <div class="col-md-2">순위</div>
-                                    <div class="col-md-6">제목</div>
-                                    <div class="col-md-2 rec">추천수</div>
-                                    <div class="col-md-2 rec">조회수</div>
-                                </div>
-                                <th:block class="mt-0 row table  mt-2 mr-0" th:each="blog,userStat  : ${mainRankBlogDTO}  ">
-                                    <div class="row table  mt-2">
-                                        <div class="col-md-2" th:text="${userStat.count}"></div>
-                                        <div class="justify-content-start col-md-6">
-                                            <a class="justify-content-start" th:href="|@{/blog/detale(num=${blog.num})}|"
-                                               th:text="${#strings.length(blog.title)>10?#strings.substring(blog.title,0,10)+'...':blog.title}">
-                                                [[${blog.title}]]
-                                            </a>
-                                        </div>
-                                        <div class="col-md-2 rec1">
-                                            [[${blog.recommendCount}]]
-                                        </div>
-                                        <div class="col-md-2 rec1">
-                                            [[${blog.readCount}]]
-                                        </div>
-                                    </div>
-
-
-                                </th:block>
-                            </div>
-
-                        </div>
+        <!-- Top 5 블로그 카드 -->
+        <div class="col-md-4 px-3">
+            <div class="card border shadow-sm rounded shadow-sm border" style="min-height: 200px;">
+                    <h5 class="card-title bg-light border-bottom" style="text-align: center;font-size: 1.1rem;">Top 5 블로그</h5>
+                    <div class="row thead m-0 pb-1 border-bottom" style="font-size: 0.8rem;">
+                        <div class="col-2 text-center">순위</div>
+                        <div class="col-6 text-center">제목</div>
+                        <div class="col-2 text-center">추천수</div>
+                        <div class="col-2 text-center">조회수</div>
                     </div>
-                    <div class="col mt-3 mb-3 ms-3 me-3">
-                        <div class="card h-100">
-                            <div class="card-body shadow">
-                                <h5 class="card-title ">Top 5 플레이스</h5>
-                                <div class="row thead  mt-3">
-                                    <div class="col-md-2">순위</div>
-                                    <div class="col-md-4">플레이스</div>
-                                    <div class="col-md-4 rec">도시</div>
-                                    <div class="col-md-2 rec">등록수</div>
+                    <div class="table mt-1">
+                        <th:block th:each="blog, userStat : ${mainRankBlogDTO}">
+                            <div class="row border-bottom p-0 m-0" style="display: flex; align-items: center; font-size: 0.8rem;">
+                                <div class="col-2 text-center" th:text="${userStat.count}"></div>
+                                <div class="col-6 text-center" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                                    <a class="text-decoration-none ps-4" th:href="|@{/blog/detale(num=${blog.num})}|"
+                                       th:text="${#strings.length(blog.title) > 15 ? #strings.substring(blog.title, 0, 15) + '...' : blog.title}"
+                                       style="display: block; text-align: left;">
+                                        [[${blog.title}]]
+                                    </a>
                                 </div>
-                                <th:block class="mt-0" th:each="place,userStat  : ${mainRankDTO}  ">
-                                    <div class="row table  mt-2">
-                                        <div class="col-md-2" th:text="${userStat.count}"></div>
-                                        <div class="justify-content-start col-md-5">
-                                            <a class="justify-content-start"
-                                               th:text="${#strings.length(place.place_name)>10?#strings.substring(place.place_name,0,10)+'...':place.place_name}">
-
-                                            </a>
-                                        </div>
-                                        <div class="col-md-3 justify-content-center rec1">
-                                            [[${#strings.length(place.cname)>5?#strings.substring(place.cname,0,5)+'...':place.cname}]]
-                                        </div>
-                                        <div class="col-md-2 rec1">
-                                            [[${place.total}]]
-                                        </div>
-                                    </div>
-
-
-                                </th:block>
+                                <div class="col-2 text-center" th:text="${blog.recommendCount}"></div>
+                                <div class="col-2 text-center" th:text="${blog.readCount}"></div>
                             </div>
-                        </div>
+                        </th:block>
                     </div>
-                    <div class="col mt-3 mb-3 ms-3 me-3">
-                        <div class="card h-100">
-                            <div class="card-body shadow">
-                                <h5 class="card-title ">Top 5 식당</h5>
-                                <div class="row thead  mt-3">
-                                    <div class="col-md-2">순위</div>
-                                    <div class="col-md-4">플레이스</div>
-                                    <div class="col-md-4 rec">도시</div>
-                                    <div class="col-md-2 rec">등록수</div>
-                                </div>
-                                <th:block class="mt-0" th:each="restaurant,userStat  : ${mainRankRestaurantDTO}  ">
-                                    <div class="row table  mt-2">
-                                        <div class="col-md-2" th:text="${userStat.count}"></div>
-                                        <div class="justify-content-start col-md-5">
-                                            <a class="justify-content-start"
-                                               th:text="${#strings.length(restaurant.place_name)>10?#strings.substring(restaurant.place_name,0,10)+'...':restaurant.place_name}">
+            </div>
+        </div>
 
-                                            </a>
-                                        </div>
-                                        <div class="col-md-3 justify-content-center rec1">
-                                            [[${#strings.length(restaurant.cname)>5?#strings.substring(restaurant.cname,0,5)+'...':restaurant.cname}]]
-                                        </div>
-                                        <div class="col-md-2 rec1">
-                                            [[${restaurant.total}]]
-                                        </div>
-                                    </div>
-
-
-                                </th:block>
+        <!-- Top 5 플레이스 카드 -->
+        <div class="col-md-4 px-3">
+            <div class="card border shadow-sm rounded shadow-sm border" style="min-height: 200px;">
+                <h5 class="card-title bg-light border-bottom" style="text-align: center; font-size: 1.1rem;">Top 5 플레이스</h5>
+                <div class="row thead m-0 pb-1 border-bottom" style="font-size: 0.8rem;">
+                    <div class="col-2 text-center">순위</div>
+                    <div class="col-4 text-center">플레이스</div>
+                    <div class="col-4 text-center">도시</div>
+                    <div class="col-2 text-center">등록수</div>
+                </div>
+                <div class="table mt-1">
+                    <th:block th:each="place, userStat : ${mainRankDTO}">
+                        <div class="row border-bottom p-0 m-0" style="display: flex; align-items: center; font-size: 0.8rem;">
+                            <div class="col-2 text-center" th:text="${userStat.count}"></div>
+                            <div class="col-4 text-center" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                                <a class="text-decoration-none ps-4" th:href="|@{/place/detale(num=${place.num})}|"
+                                   th:text="${#strings.length(place.place_name) > 15 ? #strings.substring(place.place_name, 0, 15) + '...' : place.place_name}"
+                                   style="display: block; text-align: left;">
+                                    [[${place.place_name}]]
+                                </a>
                             </div>
+                            <div class="col-4 text-center" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" th:text="${place.cname}"></div>
+                            <div class="col-2 text-center" th:text="${place.total}"></div>
                         </div>
-                    </div>
+                    </th:block>
                 </div>
             </div>
         </div>
+
+        <!-- Top 5 식당 카드 -->
+        <div class="col-md-4 px-3">
+            <div class="card border shadow-sm rounded shadow-sm border" style="min-height: 200px;">
+                <h5 class="card-title bg-light border-bottom" style="text-align: center; font-size: 1.1rem;">Top 5 식당</h5>
+                <div class="row thead m-0 pb-1 border-bottom" style="font-size: 0.8rem;">
+                    <div class="col-2 text-center">순위</div>
+                    <div class="col-4 text-center">플레이스</div>
+                    <div class="col-4 text-center">도시</div>
+                    <div class="col-2 text-center">등록수</div>
+                </div>
+                <div class="table mt-1">
+                    <th:block th:each="restaurant, userStat : ${mainRankRestaurantDTO}">
+                        <div class="row border-bottom p-0 m-0" style="display: flex; align-items: center; font-size: 0.8rem;">
+                            <div class="col-2 text-center" th:text="${userStat.count}"></div>
+                            <div class="col-4 text-center" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                                <a class="text-decoration-none ps-4" th:href="|@{/restaurant/detale(num=${restaurant.num})}|"
+                                   th:text="${#strings.length(restaurant.place_name) > 15 ? #strings.substring(restaurant.place_name, 0, 15) + '...' : restaurant.place_name}"
+                                   style="display: block; text-align: left;">
+                                    [[${restaurant.place_name}]]
+                                </a>
+                            </div>
+                            <div class="col-4 text-center" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" th:text="${restaurant.cname}"></div>
+                            <div class="col-2 text-center" th:text="${restaurant.total}"></div>
+                        </div>
+                    </th:block>
+                </div>
+            </div>
+        </div>
+
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-
-
-    <script th:inline="javascript">
-    </script>
-
-
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
