--- a/src/main/resources/templates/place/list.html
+++ b/src/main/resources/templates/place/list.html
@@ -9,33 +9,14 @@
 </head>
 <body>
 
-<div layout:fragment="content" class="mt-2 border rounded bg-light shadow-sm">
+<div layout:fragment="content" class="mt-3 border rounded bg-light shadow-sm">
 
-  <style>
-    .table {
-      border-collapse: collapse;
-    }
-    .thcolor {
-      border-top: 3px solid #d0e7ff;
-      border-bottom: 3px solid #d0e7ff;
-    }
-    .thonecolor {
-      border-bottom: 3px solid #d0e7ff;
-    }
-    .table tbody tr:last-child {
-      border-bottom: 3px solid #d0e7ff;
-    }
-    .table tbody tr {
-      line-height: 2.7;
-    }
-  </style>
-
-  <div class="row g-0">
-    <div class="col shadow mt-2">
+  <div class="row g-0" style="height:685px">
+    <div class="col shadow">
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
           <form class="d-flex formObj" role="search" method="get">
-            <select name="type" th:field="*{type}" class="form-select" aria-label="Default select example">
+            <select name="type" class="form-select" aria-label="Default select example">
               <option value="t" selected>플레이스 명</option>
             </select>
             <input class="form-control me-2" name="keyword" type="search" placeholder="Search" aria-label="Search">
@@ -44,77 +25,53 @@
         </div>
       </nav>
 
-      <!-- 게시글이 있을 경우 -->
       <div>
-        <table class="table table-bordered text-center">
-          <!-- 테이블 헤더 -->
+        <table class="table table-hover text-center table">
           <thead class="thead-light thcolor">
-          <tr style="border: none">
-            <th style="border: none" scope="col">순위</th>
-            <th style="border: none" scope="col">플레이스</th>
-            <th style="border: none" scope="col">도시</th>
-            <th style="border: none" scope="col">등록수</th>
+          <tr>
+            <th scope="col">순위</th>
+            <th scope="col">플레이스</th>
+            <th scope="col">도시</th>
+            <th scope="col">등록수</th>
           </tr>
           </thead>
 
-          <tr class="thonecolor" style="height: 20px; border: none; border-bottom: 3px solid #d0e7ff;">
-            <td style="border: none"></td>
-            <td style="border: none"></td>
-            <td style="border: none;"></td>
+          <tr class="thonecolor" style="height: 20px;">
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
-          <div>
-            <!-- 테이블 본문 -->
-            <tbody>
-
-            <th:block th:each="list, stat: ${placeListDTO}">
-              <tr style="border: none">
-                <!-- 글번호 -->
-                <td style="border: none" th:text="${stat.count}">
-                </td>
-                <!-- 플레이스 (가게명) -->
-                <td style="border: none">
-                  <a class="countappend text-decoration-none text-reset">
-                    [[${list.place_name}]]
-                  </a>
-                </td>
-                <td style="border: none">
-                  <span class="countappend text-decoration-none text-reset">
-                    [[${list.cname}]]
-                  </span>
-                </td>
-
-                <!-- 등록수 -->
-                <td style="border: none">
-                  <span class="fs-6 text-muted">[[${list.total}]]</span>
-                </td>
-              </tr>
-            </th:block>
-
-            <td class="thlinecolor p-0 m-0">
-            </td>
-
-            </tbody>
-          </div>
-
+          <tbody>
+          <th:block th:each="list, stat: ${placeListDTO}">
+            <tr>
+              <td th:text="${stat.count}"></td>
+              <td class="text-start">
+                <a class="countappend text-decoration-none text-reset ">[[${list.place_name}]]</a>
+              </td>
+              <td><span class="countappend text-decoration-none text-reset">[[${list.cname}]]</span></td>
+              <td><span class="fs-6 text-muted">[[${list.total}]]</span></td>
+            </tr>
+          </th:block>
+          </tbody>
         </table>
       </div>
 
       <div class="row text-center">
         <div class="col">
           <div class="dataTables_paginate paging_simple_numbers" id="dataTables-example_paginate">
-            <ul class="pagination justify-content-center">
-            </ul>
+            <ul class="pagination justify-content-center"></ul>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="col-md-5 mt-2 border rounded bg-light shadow-sm">
-
+    <div class="col-md-5 border rounded bg-light shadow-sm">
       <div class="row">
         <form class="d-flex" role="search" action="/board/list" method="get" style="float: right">
-          <select class="form-select form-select-lg mb-3" aria-label="Large select example" onchange="selectReg(this.value); selectMap(this.value);">
+          <select class="form-select mb-2" aria-label="Large select example" onchange="selectReg(this.value); selectMap(this.value);">
+            <option selected>지역을 선택하셈</option>
             <option selected>지역을 선택하셈</option>
             <option value="city1">서울특별시</option>
             <option value="city2">부산광역시</option>
@@ -144,78 +101,33 @@
         <button class="btn btn-primary btn-sm">검색</button>
       </form>
 
-      <div id="map" class="h-50 mt-3" style="position: relative;z-index:1">
+      <div id="map" class="h-50 mt-3" style="position: relative; z-index:1">
         <div id="menu_wrap" style="display: none; z-index: 5;">
           <ul id="placesList"></ul>
           <div id="pagination"></div>
         </div>
-
-        <style>
-          .map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
-          #menu_wrap {position:absolute;top:0;left:0;bottom:0;width:250px;margin:10px 0 30px 0px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;'돋움',sans-serif;font-size:10px}
-          .bg_white {background:#fff;}
-          #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0;}
-          #menu_wrap .option{text-align: center; margin:0 1px}
-          #menu_wrap .option p {margin:10px 0;}
-          #menu_wrap .option button {margin-left:0px;}
-          #placesList {margin:0; padding: 0}
-          #placesList li {list-style: none; margin:0}
-          #placesList .item {position:relative;border-bottom:1px solid #888;overflow: hidden;cursor: pointer;min-height: 65px; }
-          #placesList .item span {display: block;margin-top:4px;}
-          #placesList .item h5 {text-overflow: ellipsis;overflow: hidden;white-space: nowrap; font-size:16px; margin-left: 18px}
-          #placesList .item .info {text-overflow: ellipsis;overflow: hidden;white-space: nowrap; font-size:12px; margin-left: 18px}
-          #placesList .item .info{padding:10px 0 10px 0px;}
-          #placesList .info .gray {color:#8a8a8a;}
-          #placesList .info .jibun {padding-left:0px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;}
-          #placesList .info .tel {color:#009900;}
-          #placesList .item .markerbg {float:left;position:absolute;width:36px; height:37px;margin:1px 0 0 0px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png) no-repeat;}
-          #placesList .item .marker_1 {background-position: 0 -10px;}
-          #placesList .item .marker_2 {background-position: 0 -56px;}
-          #placesList .item .marker_3 {background-position: 0 -102px}
-          #placesList .item .marker_4 {background-position: 0 -148px;}
-          #placesList .item .marker_5 {background-position: 0 -194px;}
-          #placesList .item .marker_6 {background-position: 0 -240px;}
-          #placesList .item .marker_7 {background-position: 0 -286px;}
-          #placesList .item .marker_8 {background-position: 0 -332px;}
-          #placesList .item .marker_9 {background-position: 0 -378px;}
-          #placesList .item .marker_10 {background-position: 0 -423px;}
-          #placesList .item .marker_11 {background-position: 0 -470px;}
-          #placesList .item .marker_12 {background-position: 0 -516px;}
-          #placesList .item .marker_13 {background-position: 0 -562px;}
-          #placesList .item .marker_14 {background-position: 0 -608px;}
-          #placesList .item .marker_15 {background-position: 0 -654px;}
-          #pagination {margin:10px auto;text-align: center;}
-          #pagination a {display:inline-block;margin-right:10px;}
-          #pagination .on {font-weight: bold; cursor: default;color:#777;}
-        </style>
-
       </div>
 
-      <!-- 날씨 정보 표시 부분 -->
       <div class="restaurantBoardWeather card mt-3">
-        <div class=" justify-content-between row">
-          <!-- 오늘의 날씨 카드 -->
-
+        <div class="row justify-content-between">
           <div class="col">
-
-            <div id="skyIconToday" class="card weather-card text-center " style="border-radius: 12px; width: 100%; height: 150px; z-index: 10">
+            <div id="skyIconToday" class="card weather-card text-center" style="border-radius: 12px; width: 100%; height: 130px;">
               <div class="card-body p-1">
-                <img id="ptyIconToday" src="" class="img-fluid" style="width: 40px; display: block; margin: 0 auto;" />
-                <h6 class="card-title" style="font-size: 0.85rem; margin: 0; padding: 0;">오늘의 날씨</h6>
-                <p style="font-size: 0.75rem; margin: 0; padding: 0;">현재기온: <span id="todayTMP"></span>°C</p>
-                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최고기온: <span id="todayTMX"></span>°C</p>
-                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최저기온: <span id="todayTMN"></span>°C</p>
+                <img id="ptyIconToday" src="" class="img-fluid" style="width: 40px; display: block; margin: 0 auto;">
+                <h6 class="card-title" style="font-size: 0.85rem; margin: 0;">오늘의 날씨</h6>
+                <p style="font-size: 0.75rem; margin: 0;">현재기온: <span id="todayTMP"></span>°C</p>
+                <p style="font-size: 0.75rem; margin: 0;">최고기온: <span id="todayTMX"></span>°C</p>
+                <p style="font-size: 0.75rem; margin: 0;">최저기온: <span id="todayTMN"></span>°C</p>
               </div>
             </div>
           </div>
           <div class="col">
-            <!-- 내일의 날씨 카드 -->
-            <div id="skyIconTomorrow" class="card weather-card text-center col" style="border-radius: 12px; width: 100%; height: 150px;">
+            <div id="skyIconTomorrow" class="card weather-card text-center" style="border-radius: 12px; width: 100%; height: 130px;">
               <div class="card-body p-1">
-                <img id="ptyIconTomorrow" src="" class="img-fluid" style="width: 40px; display: block; margin: 0 auto;" />
-                <h6 class="card-title" style="font-size: 0.85rem; margin: 0; padding: 0;">내일의 날씨</h6>
-                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최고기온: <span id="tomorrowTMX"></span>°C</p>
-                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최저기온: <span id="tomorrowTMN"></span>°C</p>
+                <img id="ptyIconTomorrow" src="" class="img-fluid" style="width: 40px; display: block; margin: 0 auto;">
+                <h6 class="card-title" style="font-size: 0.85rem; margin: 0;">내일의 날씨</h6>
+                <p style="font-size: 0.75rem; margin: 0;">최고기온: <span id="tomorrowTMX"></span>°C</p>
+                <p style="font-size: 0.75rem; margin: 0;">최저기온: <span id="tomorrowTMN"></span>°C</p>
               </div>
             </div>
           </div>
